= News file for loccount =

2.0: 2019-02-23::
     Added ability to count LLOC in many languages and make COCOMO II estimates.
     Support Algol 60, F#, Dart, Cobra, VRML, Modula-2, and Kotlin.

1.3: 2019-02-20::
     Added support for Rebol, Verilog, Simula, Icon, VHDL.

1.2: 2017-12-05
     Work around bug in the parallelized treewalker that barfed on .. paths.

1.1: 2017-07-09
     Documentation fix for copy-paste error.
     Cleanup suggested by https://goreportcard.com/report/gitlab.com/esr/loccount

1.0: 2017-02-13::
     Initial release.